tests/baselines/reference/moduleAsBaseType.errors.txt
moduleAsBaseType.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleAsBaseType.ts(2,17): error TS2708: Cannot use namespace 'M' as a value.
moduleAsBaseType.ts(3,21): error TS2709: Cannot use namespace 'M' as a type.
moduleAsBaseType.ts(4,21): error TS2709: Cannot use namespace 'M' as a type.


==== moduleAsBaseType.ts (4 errors) ====
    module M {}
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    class C extends M {}
                    ~
!!! error TS2708: Cannot use namespace 'M' as a value.
    interface I extends M { }
                        ~
!!! error TS2709: Cannot use namespace 'M' as a type.
    class C2 implements M { }
                        ~
!!! error TS2709: Cannot use namespace 'M' as a type.